<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:hint="@string/enter_your_name"
            android:inputType="textCapWords"
            android:maxLength="20"
            android:maxLines="1"

            />

        <EditText
            android:id="@+id/edit_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:hint="@string/enter_your_mobile_no"
            android:inputType="phone"
            android:maxLength="10"
            android:maxLines="1"

            />


        <TextView
            android:id="@+id/Toppings"
             style = "@style/HeaderTextStyle"

            android:text="@string/toppings"

            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/check_cheese"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:onClick="checkBoxClicked"
            android:paddingLeft="24dp"
            android:text="@string/cheese"
            android:textSize="16sp"

            android:layout_marginStart="16dp" />

        <CheckBox
            android:id="@+id/check_whippedCream"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:onClick="checkBoxClicked"
            android:paddingLeft="24dp"
            android:text="@string/whipped_cream"

            android:textSize="16sp"

            />


        <TextView
            android:id="@+id/quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"


            android:text="@string/quantity"
            android:textAllCaps="true"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_margin="16dp"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:onClick="decrement"
                android:text="@string/minus" />

            <TextView

                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_margin="16dp"
                android:text="@string/integer_one"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_margin="16dp"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:onClick="increment"
                android:text="@string/plus"

                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>


        <TextView
            android:id="@+id/order_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_margin="16dp"
            android:text="@string/order_summary"
            android:textAllCaps="true"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/price_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="21dp"
            android:layout_marginLeft="21dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="16dp"
            android:text="$"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_margin="16dp"
            android:onClick="submitOrder"
            android:text="@string/order"
            android:textAllCaps="true"
            android:textStyle="bold" />


    </LinearLayout>
</ScrollView>